# baselom

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  mise.toml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
baselom_core/: __init__.py  engine.py  exceptions.py  models.py  serializer.py  validators.py
docs/: SPECIFICATION_FIXES.md  api-reference.md  architecture.md  data-models.md  development.md  error-handling.md  implementation-plan.md  index.md  rules-logic.md  serialization.md  testing.md  versioning.md
src/: engine.rs  errors.rs  lib.rs  models.rs  validators.rs
tests/: conftest.py  test_engine.py  test_models.py  test_validators.py
