[package]
name = "baselom-core"
version = "0.1.0"
edition = "2021"
authors = ["tohboeh5"]
description = "Lightweight, pure game-state engine for baseball"
license = "MIT"
repository = "https://github.com/tohboeh5/baselom"
keywords = ["baseball", "game-engine", "state-machine"]
categories = ["game-engines", "simulation"]

[lib]
name = "baselom_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
criterion = "0.5"

[profile.release]
lto = true
opt-level = 3

[features]
default = ["python"]
python = ["pyo3"]
