[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "baselom-core"
version = "0.1.0"
description = "Lightweight, pure game-state engine for baseball"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "tohboeh5" }]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Games/Entertainment :: Simulation",
]
keywords = ["baseball", "game-engine", "state-machine", "simulation"]

[project.urls]
Homepage = "https://github.com/tohboeh5/baselom"
Repository = "https://github.com/tohboeh5/baselom"
Documentation = "https://github.com/tohboeh5/baselom/tree/main/docs"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "baselom_core._core"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "mypy>=1.13",
    "ruff>=0.8",
    "maturin>=1.7",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D104"]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S101", "PLR2004"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
